--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -226,9 +226,8 @@
         <div class="contact-info">
             <h2>Contact Information</h2>
             <p>If you have any questions about this Privacy Policy or our data practices, please contact us:</p>
-            <p><strong>Email:</strong> privacy@liefmax.com<br>
-            <strong>Address:</strong> [Your Business Address]<br>
-            <strong>Phone:</strong> [Your Contact Number]</p>
+            <p><strong>Email:</strong> info@liefmax.com<br>
+            <strong>Phone:</strong> 17625436473</p>
         </div>
 
         <h2>Legal Basis for Processing (EU Users)</h2>
